--- a/project/public/locales/en.json
+++ b/project/public/locales/en.json
@@ -6,7 +6,7 @@
   "nav.services": "Services",
   "hero.subtitle": "Money transfers",
   "hero.title": "Your Gateway to Seamless\nInternational Money Transfers.",
-  "hero.description": "Create your account as an Individual or Business, verify your identity with ONFIDO-powered KYC, and unlock your digital wallet — all within minutes. Send money globally via Bank Transfer or FlexM Wallet, manage your receivers, and track every transaction in real time.",
+  "hero.description": "Create your account as an Individual or Business on our Customer Portal or mobile app, verify your identity with ONFIDO-powered KYC, and unlock your digital wallet — all within minutes. Send money globally via Bank Transfer or FlexM Wallet, manage your receivers, and track every transaction in real time.",
   "hero.download": "Download the App",
   "hero.login": "Customer Portal",
   "hero.sales": "Contact Us",
@@ -14,8 +14,8 @@
   "trade.title": "From Sign-Up to Send Money —",
   "trade.subtitle": "In Just a Few Simple Steps.",
   "trade.description": "Register with your phone number, verify via OTP, complete your KYC through our secure ONFIDO integration, and unlock your wallet. Choose Bank Transfer or FlexM Wallet to send money internationally — with real-time exchange rates, transparent fees, and instant transaction tracking.",
-  "trade.cta": "Explore the Portal",
-  "features.title": "Customer Portal Features",
+  "trade.cta": "Explore Portal & App",
+  "features.title": "Portal & App Features",
   "features.wallet.title": "FlexM Digital Wallet",
   "features.wallet.desc1": "KYC-verified wallet activation with OTP security",
   "features.wallet.desc2": "Top up via PayNow, view balance, and pay directly from your wallet",
@@ -36,13 +36,13 @@
   "footer.contact": "Contact Us",
   "footer.email": "Email",
   "footer.phone": "Phone",
-  "footer.blurb": "Dazzling Xchange is a licensed digital remittance platform in Singapore. Register, verify your identity, unlock your wallet, and send money internationally — all from our secure Customer Portal.",
+  "footer.blurb": "Dazzling Xchange is a licensed digital remittance platform in Singapore. Register, verify your identity, unlock your wallet, and send money internationally — via our Customer Portal or mobile app.",
   "footer.copyright": " 2025 by Dazzling Xchange Pte Ltd | PSO License Number: PS20200465",
   "footer.address": "11 Collyer Quay #02-34, The Arcade Singapore 049317",
   "footer.terms": "Terms of Use",
   "footer.privacy": "Privacy Policy",
   "about.title": "Enabling Individuals and Businesses to Move Money Globally",
-  "about.subtitle": "Dazzling Xchange is a licensed digital remittance platform based in Singapore. Our Customer Portal lets you register as an Individual or Business, verify your identity through ONFIDO-powered KYC, unlock a digital wallet, and send money internationally via Bank Transfer or FlexM Wallet — with full receiver management, real-time tracking, and 24/7 support.",
+  "about.subtitle": "Dazzling Xchange is a licensed digital remittance platform based in Singapore. Our Customer Portal and mobile app let you register as an Individual or Business, verify your identity through ONFIDO-powered KYC, unlock a digital wallet, and send money internationally via Bank Transfer or FlexM Wallet — with full receiver management, real-time tracking, and 24/7 support.",
   "about.mission": "Our Mission: Making International Transfers Accessible to All",
   "about.mission.text": "We believe sending money across borders should be as simple as sending a message. Our platform handles the complexity — OTP-secured registration, ONFIDO identity verification, wallet activation, receiver management, and end-to-end transaction tracking — so you can focus on what matters most.",
   "about.values": "Our Values",
@@ -57,7 +57,7 @@
   "services.title": "Our Services",
   "services.subtitle": "A complete suite of cross-border payment services — from secure registration and identity verification to international transfers, receiver management, and transaction tracking.",
   "services.cta.title": "Contact Us",
-  "services.cta.subtitle": "Register on the DX Customer Portal and start sending money internationally in minutes.",
+  "services.cta.subtitle": "Register on the DX Customer Portal or mobile app and start sending money internationally in minutes.",
   "services.cta.download": "Download the App",
   "services.cta.contact": "Contact Us",
   "services.fast.title": "Fast Transfers",
@@ -102,20 +102,20 @@
   "languages.ur": "اردو",
   "languages.ta": "தமிழ்",
   "institutions.title": "Business Account Solutions",
-  "institutions.subtitle": "Register your business on the DX Customer Portal and unlock a dedicated environment for managing international payments, receivers, and transaction records — all verified and compliant.",
+  "institutions.subtitle": "Register your business on the DX Customer Portal or mobile app and unlock a dedicated environment for managing international payments, receivers, and transaction records — all verified and compliant.",
   "institutions.multicurrency.title": "Business Registration & KYC",
   "institutions.multicurrency.desc": "Set up a verified business account with dedicated KYC processing powered by ONFIDO document and identity verification.",
   "institutions.localaccount.title": "Multi-Currency Transfers",
   "institutions.localaccount.desc": "Send international payments in multiple currencies with real-time exchange rates and transparent fee calculations.",
   "institutions.payments.title": "Bank Transfer & Wallet Payments",
-  "institutions.payments.desc": "Choose between Bank Transfer for direct wire payments or FlexM Wallet for instant digital transfers — both from a single portal.",
+  "institutions.payments.desc": "Choose between Bank Transfer for direct wire payments or FlexM Wallet for instant digital transfers — both from the portal and app.",
   "institutions.integrations.title": "Receiver & Transaction Management",
   "institutions.integrations.desc": "Maintain a centralized receiver directory, track all transactions with unique reference IDs, and export reports for your records.",
   "institutions.cta.title": "Open a Business Account",
-  "institutions.cta.subtitle": "Streamline your international payments with a verified business portal.",
+  "institutions.cta.subtitle": "Streamline your international payments with our verified portal or app.",
   "institutions.cta.download": "Customer Portal",
   "institutions.cta.contact": "Contact Us",
-  "corporate.title": "How the DX Customer Portal Works",
+  "corporate.title": "How the DX Portal & App Work",
   "corporate.subtitle": "A step-by-step journey from registration to completed transfer — designed for clarity, speed, and security.",
   "corporate.secure.title": "Verified & Secure",
   "corporate.secure.desc": "Every account is protected with OTP authentication, ONFIDO-powered KYC verification, and password strength enforcement.",
@@ -130,15 +130,15 @@
   "corporate.fx.title": "Real-Time Rates & Transparent Fees",
   "corporate.fx.desc": "View live exchange rates, see exact fee breakdowns before confirming, and watch receiver amounts update as you type. No hidden charges, ever.",
   "corporate.cta.title": "Start Sending Money Today",
-  "corporate.cta.subtitle": "Register on the DX Customer Portal and make your first international transfer in minutes.",
+  "corporate.cta.subtitle": "Register on the DX Customer Portal or app and make your first international transfer in minutes.",
   "corporate.cta.download": "Customer Portal",
   "corporate.cta.contact": "Contact Us",
   "global.title": "Everything You Need in One Intelligent Dashboard",
-  "global.description": "The DX Customer Portal brings your entire payment journey under one roof. Register as an Individual or Business, complete identity verification powered by ONFIDO, and activate your wallet with a single OTP. Send money via Bank Transfer or FlexM Wallet, manage your receivers with full edit and search capabilities, and monitor every transaction from pending to completed — with downloadable receipts and real-time status updates.",
+  "global.description": "The DX Customer Portal and mobile app bring your entire payment journey under one roof. Register as an Individual or Business, complete identity verification powered by ONFIDO, and activate your wallet with a single OTP. Send money via Bank Transfer or FlexM Wallet, manage your receivers with full edit and search capabilities, and monitor every transaction from pending to completed — with downloadable receipts and real-time status updates.",
   "global.features.instant": "ONFIDO-Powered Identity Verification",
   "global.features.support": "Bank Transfer & FlexM Wallet",
   "global.features.reach": "Full Transaction Lifecycle Tracking",
-  "global.networkTitle": "DX Customer Portal",
+  "global.networkTitle": "DX Portal & App",
   "stats.transactions": "In Cross-Border Transfers",
   "stats.merchants": "Registered Users",
   "stats.faster": "Faster Than Traditional Banks",
@@ -149,13 +149,13 @@
   "trust.cards.financing.title": "ONFIDO-Verified Identity",
   "trust.cards.financing.description": "Industry-leading KYC powered by ONFIDO with document verification and facial recognition for maximum account security.",
   "trust.cards.solutions.title": "Flexible Payment Channels",
-  "trust.cards.solutions.description": "Send money via Bank Transfer or FlexM Wallet. Top up your wallet through PayNow and manage everything from one portal.",
+  "trust.cards.solutions.description": "Send money via Bank Transfer or FlexM Wallet. Top up your wallet through PayNow and manage everything from our portal or app.",
   "trust.cards.network.title": "24/7 Customer Support",
   "trust.cards.network.description": "Dedicated support available around the clock. Any issue you encounter is resolved within 24 hours, guaranteed.",
   "trust.verified": "Active",
   "trust.cta": "Get Started Now",
   "about.header": "About Dazzling Xchange",
-  "about.mission.description1": "Dazzling Xchange bridges the gap between traditional banking and modern digital finance. Our Customer Portal guides you through a seamless journey — register with your phone number, verify your identity through ONFIDO's document and facial recognition technology, and activate your wallet with a single OTP. Choose between Bank Transfer and FlexM Wallet to send money internationally, manage your receivers with full add, edit, and search capabilities, and track every transaction from initiation to completion. Whether you're an individual sending funds to family or a business managing international payments, we're here to make",
+  "about.mission.description1": "Dazzling Xchange bridges the gap between traditional banking and modern digital finance. Our Customer Portal and mobile app guide you through a seamless journey — register with your phone number, verify your identity through ONFIDO's document and facial recognition technology, and activate your wallet with a single OTP. Choose between Bank Transfer and FlexM Wallet to send money internationally, manage your receivers with full add, edit, and search capabilities, and track every transaction from initiation to completion. Whether you're an individual sending funds to family or a business managing international payments, we're here to make",
   "about.mission.highlight": "global money transfers effortless.",
   "about.mission.description2": "",
   "about.mission.stats.countries": "Countries",
@@ -176,8 +176,8 @@
   "about.values.customer.description": "Guided registration, intuitive payment flows, full receiver management with search and filter, and 24/7 dedicated support that resolves issues within 24 hours.",
   "about.values.global.title": "Global Connectivity",
   "about.values.global.description": "Send money internationally in multiple currencies through Bank Transfer or FlexM Wallet, with transparent fee breakdowns and competitive exchange rates on every transfer.",
-  "services.payments.title": "DX Customer Portal — Your Complete Payment Hub",
-  "services.payments.description": "Register as an Individual or Business, verify your identity through ONFIDO, activate your wallet, and start sending money globally. Our portal handles Bank Transfer and FlexM Wallet payments with real-time rates, transparent fees, and full transaction tracking.",
+  "services.payments.title": "DX Portal & App — Your Complete Payment Hub",
+  "services.payments.description": "Register as an Individual or Business, verify your identity through ONFIDO, activate your wallet, and start sending money globally. Our portal and app handle Bank Transfer and FlexM Wallet payments with real-time rates, transparent fees, and full transaction tracking.",
   "services.payments.features.global": "Individual & Business Registration",
   "services.payments.features.fast": "ONFIDO Identity Verification",
   "services.payments.features.seamless": "OTP-Secured Wallet Activation",
@@ -206,7 +206,7 @@
   "services.trade.example.total": "Pending → Processing → Completed (or Failed/Cancelled)",
   "services.trade.example.repayment": "Every transaction generates a unique ID with downloadable receipts",
   "services.fx.title": "Manage, Monitor & Stay in Control",
-  "services.fx.description": "The DX Customer Portal gives you complete visibility and control over every aspect of your payment activity — from receiver details to transaction status to wallet balance.",
+  "services.fx.description": "The DX Customer Portal and app give you complete visibility and control over every aspect of your payment activity — from receiver details to transaction status to wallet balance.",
   "services.fx.manager.title": "Receiver Directory",
   "services.fx.manager.description": "Add receivers from the Send Money flow or the dedicated Receivers page. Store full name, country, currency, and account details. Edit, delete, and search with ease.",
   "services.fx.fixed.title": "Transaction Records",
@@ -217,9 +217,9 @@
   "services.fx.nondeliverable.description": "View your FlexM Wallet balance, top up via PayNow with QR payments, and monitor deductions after every transfer — all in real time.",
   "services.fx.playbook.title": "Built on Trust and Transparency",
   "services.fx.playbook.description": "Licensed under PSO (PS20200465), verified through ONFIDO, and secured with OTP authentication. Every fee is displayed before you confirm, every transaction generates a receipt, and every issue is resolved by our 24/7 support team within 24 hours.",
-  "services.digital.title": "The DX Customer Portal",
-  "services.digital.description": "A unified platform for individuals and businesses to register, verify, send, manage, and track international money transfers — with two flexible payment channels and comprehensive self-service tools.",
-  "services.digital.everything": "Your entire payment journey, one portal",
+  "services.digital.title": "The DX Portal & App",
+  "services.digital.description": "A unified platform for individuals and businesses to register, verify, send, manage, and track international money transfers — on web or mobile. Two flexible payment channels and comprehensive self-service tools.",
+  "services.digital.everything": "Your entire payment journey, portal or app",
   "services.digital.convert": "View Live Exchange Rates",
   "services.digital.book": "Manage Your Receivers",
   "services.digital.manage": "Track All Transactions",
@@ -231,7 +231,7 @@
   "services.metrics.faster": "Faster Than Traditional Banks",
   "services.metrics.clients": "Countries Supported",
   "services.accounts.title": "Your Wallet, Your Control",
-  "services.accounts.description": "Once your KYC is verified via ONFIDO, unlock your FlexM digital wallet with a single OTP. Top up through PayNow, view your balance in real time, and pay directly for international transfers — all from one secure dashboard.",
+  "services.accounts.description": "Once your KYC is verified via ONFIDO, unlock your FlexM digital wallet with a single OTP. Top up through PayNow, view your balance in real time, and pay directly for international transfers — all from the portal or app.",
   "services.accounts.multicurrency": "FlexM Wallet with multi-currency support",
   "services.accounts.local": "ONFIDO-verified wallet activation",
   "services.accounts.conversion": "Live exchange rates per transaction",
@@ -251,7 +251,7 @@
   "services.platform.support": "Support",
   "services.platform.countries": "Countries",
   "services.platform.currencies": "Currencies",
-  "services.digital.features.title": "Everything You Need, One Portal",
+  "services.digital.features.title": "Everything You Need, Portal or App",
   "services.digital.features.convert": "Real-Time Exchange Rates & Fee Display",
   "services.digital.features.book": "Add, Edit, Search & Manage Receivers",
   "services.digital.features.manage": "Track Transactions (Pending → Completed)",
